# myAlgorithmSnnipet

./: README.md  pyproject.toml
.github/workflows/: format.yaml
Python/: BinarySearch.py  Binomial_theorem.py  Dinic.py  F2sweep.py  README.md  TemarySearch.py  UnionFindTree.py  cumsum.py  dijkstra.py  fastPrimeFactorization.py  kitamasa.py  matrix_power.py  mo.py  scc.py  segmentTree.py  stdMultiSet.py
