[tool.poetry]
name = "myAlgorithmSnnipet"
version = "0.1.0"
description = ""
authors = ["nobuhiro tada <tada@unirobot.com>"]

[tool.poetry.dependencies]
python = "^3.9"
black = "^21.6b0"
autoflake = "^1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

